<resources>
    <string name="app_name">MyList</string>
    <string name="task_progress">%d/%d  tasks completed</string>
    <string name="he">0 /  tasks completed</string>
    <string name="task_completed">Task completed</string>
    <string name="add_task">Add task</string>
    <string name="enter_title">Enter title</string>
    <string name="important_task">Important task</string>
    <string name="edit_delete_task">Edit/Delete Task</string>
    <string name="create_task">Create Task</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="feedback_text">Send feedback, If the app keeps crashing \'Clear app data\' or send it an Email</string>
    <string name="rating_text">Love this app? Let us know in Google Play Store how we can make it even better</string>
    <string name="more_app_text">Check out other apps</string>
    <string name="share_text">Share the app with your friends and family</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Kaushal Vasava</string>
    <string name="about">About</string>
    <string name="current_version">Current version</string>
    <string name="more">More</string>
    <string name="market_string">market://search?q=pub:Kaushal Vasava</string>
    <string name="market_developer_string">http://play.google.com/store/apps/developer?id=Kaushal Vasava</string>
    <string name="play_store_share">https://play.google.com/store/apps/details?id=</string>
    <string name="feedback_email">kaushalvasava.app.feedback@gmail.com</string>
    <string name="contact_support">Contact Support</string>
    <string name="rating">Rate the app</string>
    <string name="more_apps">More Apps</string>
    <string name="share_app">Share App</string>
    <string name="delete_completed_task">Delete all completed tasks</string>
    <string name="hide_completed_task">Hide completed tasks</string>
    <string name="settings">Settings</string>
    <string name="sorting_option">Sorting Option</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_creation_date">Sort by Creation date</string>
    <string name="search">Search</string>
    <string name="select_all">Select all</string>
    <string name="delete">Delete</string>
    <string name="add_date_time">Add date/time</string>
    <string name="reminder">Reminder</string>

</resources>